feat(claim_feed): create new endpoint to list using a cursor and remove usless table joins
