# src/controllers/api.controller.ts
@@ -5,6 +5,8 @@ import createError from "http-errors";
 
 import { ClaimDao, NodeDao } from "../dao/api.dao";
 
+const DEFAULT_LIMIT = 100;
+
 const claimDao = new ClaimDao();
 const nodeDao = new NodeDao();
 
@@ -139,3 +141,31 @@ export const claimsFeed = async (req: Request, res: Response, next: NextFunction
     passToExpressErrorHandler(err, next);
   }
 };
+
+export async function claimsFeedV3(req: Request, res: Response, next: NextFunction) {
+  try {
+    const { search, limit, nextPage } = parseAndValidateClaimsFeedV3Query(req.query);
+    const feedEntries = await nodeDao.getFeedEntriesV3(limit, nextPage, search);
+    return res.status(200).json(feedEntries);
+  } catch (err) {
+    passToExpressErrorHandler(err, next);
+  }
+}
+
+function parseAndValidateClaimsFeedV3Query(query: Request["query"]): {
+  limit: number;
+  nextPage: string | null;
+  search: string | null;
+} {
+  const limit = parseInt((query.limit || DEFAULT_LIMIT).toString());
+
+  if (Number.isNaN(limit) || limit <= 0 || limit > 10000) {
+    throw new createError.UnprocessableEntity("Invalid limit value");
+  }
+
+  const search = query.search ? decodeURIComponent(query.search.toString()) : null;
+
+  const nextPage = query.nextPage?.toString() || null;
+
+  return { limit, search, nextPage };
+}
